compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_imported_as_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "import gleam/foo.{Bar}"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:1:19
  │
1 │ import gleam/foo.{Bar}
  │                   ^^^ Did you mean `type Bar`?

`Bar` is only a type, it cannot be imported as a value.
